<resources>
    <string name="app_name">心记</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="no_network_warn">internet failed</string>

    <string name="first_day_of_lunar_month">初一</string>
    <!--for test-->
    <string name="right_top_text">场馆绑定页面，若已定位用户位置，将当前城市的小熊快跑智能健身房置顶显示；若用户还未定位位置或定位失败，则默认置顶北京的小熊快跑智能健身房</string>



    <!--MainActivity-->
    <!--MainActivity-->
    <string name="main_activity_back_warn">再按一次返回推出心记</string>
    <string name="tab_view_main">日历</string>
    <string name="tab_view_chart">图表</string>
    <string name="tab_view_setting">设置</string>
    <string name="phone_contacts_search_hint">搜索手机通讯录</string>
    <string name="phone_contacts_title">手机通讯录</string>
    <string name="phone_contacts_empty">未搜索到联系人</string>
    <string name="phone_search_cancel">取消</string>

    <!--Ultra ptr-->
    <!--Ultra ptr-->
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>

    <string name="cube_ptr_last_update">last update:&#160;</string>
    <string name="cube_ptr_seconds_ago">&#160;seconds ago</string>
    <string name="cube_ptr_minutes_ago">&#160;minutes ago</string>
    <string name="cube_ptr_hours_ago">&#160;hours ago</string>
    <string name="color_test">&lt;font color=\'#FFFFFF\'&gt;CollapsingToolbarLayout&lt;/font&gt;</string>
    <string name="color_test1">&lt;font color=\'#ffe60000\'&gt;&lt;big&gt;&lt;big&gt;&lt;big&gt;&lt;big&gt;外出携带好&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;&lt;/font&gt;口罩</string>
</resources>
