<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item android:id="@+id/action_edit"
          android:title="@string/tab_view_main"
          android:orderInCategory="80"
          android:icon="@mipmap/ic_bottomtabbar_calendar"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_share"
          android:title="@string/tab_view_chart"
          android:orderInCategory="90"
          android:icon="@mipmap/ic_bottomtabbar_record"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
          android:title="@string/tab_view_setting"
          android:orderInCategory="100"
          android:icon="@drawable/ic_launcher"
          app:showAsAction="never"/>
</menu>