<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:id="@+id/layout_phone_contacts_title_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_title_bar_height"
            android:background="@color/setting_background_gray">

            <TextView
                android:id="@+id/tv_cancel_search_phone_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/phone_search_cancel"
                android:textColor="@color/orange"
                android:textSize="@dimen/text_size_large" />

            <EditText
                android:id="@+id/et_search_phone_contact"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_tv_height"
                android:layout_centerVertical="true"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@id/tv_cancel_search_phone_contact"
                android:background="@drawable/corners_search_white_border_bg"
                android:drawableLeft="@mipmap/ic_search_gray"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:hint="@string/phone_contacts_search_hint"
                android:imeOptions="actionSearch"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColorHint="@color/line_gray"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_title_bar_height"
            android:background="@color/main_theme_color"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/left_btn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/common_title_bar_height"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/common_margin_left_right"
                android:paddingRight="@dimen/common_margin_left_right"
                 />

            <TextView
                android:id="@+id/center_title_text"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/common_title_bar_height"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/phone_contacts_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_main_title" />
        </RelativeLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_photo_contacts_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_tv_height"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="5dp"
        android:background="@drawable/corners_search_white_border_bg"
        android:drawableLeft="@mipmap/ic_search_gray"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/phone_contacts_search_hint"
        android:paddingLeft="8dp"
        android:textColorHint="@color/line_gray"
        android:textSize="13sp" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <ListView
            android:id="@+id/lv_phone_contacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="0.5dp"
            android:divider="@color/line_gray"
            android:listSelector="@color/transparency">
        </ListView>

        <TextView
            android:id="@+id/tv_phone_contact_no_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="50dp"
            android:text="@string/phone_contacts_empty"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/text_color_gray_66"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/layout_phone_contact_search_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/alpha_20_percent_black"
            android:clickable="true"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/lv_phone_contact_search_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="#ffdddddd"
                    android:dividerHeight="0.5dp"
                    android:listSelector="@color/transparency" />

                <TextView
                    android:id="@+id/tv_phone_contact_search_no_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="70dp"
                    android:text="@string/phone_contacts_empty"
                    android:textSize="@dimen/text_size_large"
                    android:visibility="gone"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>